Prevent footer overlapping on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -55,6 +55,7 @@ p {
 
 /* custom footer with source and license info */
 .custom-footer {
+    clear: both;
     font-size: 16px;
     margin-top: 30px;
     padding-top: 20px;
